--- a/gb/19/6/25/n11345420.md
+++ b/gb/19/6/25/n11345420.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yu2306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yu2306/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yu2306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yu2306/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yu2306/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yu2306/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yu2306/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yu2306/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>小型电动飞机问世 节约能源费用</h2>
-<a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dtfavhq5d1ym2.cloudfront.net/W0vHkrrYw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>斯洛文尼亚的一家公司销售的小型电动飞机Pipistrel Alpha，每飞行1小时耗电成本在4～6美元之间。（<a target="_blank" href="https://www.youtube.com/watch?v=WiADDbeFanU" rel="noopener" target="_blank">YouTube: AVweb
 </h6>
 <hr>
-	<p>【大纪元2019年06月25日讯】（大纪元记者李凡综合报导）在过去的一两年间，公路上经常能够看到电动汽车；与此同时，<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8%E9%A3%9E%E6%9C%BA.md#1">电动飞机</a>也已经开始进入商业市场。</p>
-<p>在23日落幕的本年度巴黎航空展上，最受关注的是以色列飞机制造商Eviation Aircraft。这家公司的全<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8%E9%A3%9E%E6%9C%BA.md#1">电动飞机</a>“爱丽丝”（Alice）一次可以承载9名乘客，充电一回最多可飞行1000多公里，飞行高度达到3000多米。爱丽丝的飞机尾部有一个主“推进式”螺旋桨，两边翼尖上也设置了螺旋桨，均由电池供电。</p>
+	<p>【大纪元2019年06月25日讯】（大纪元记者李凡综合报导）在过去的一两年间，公路上经常能够看到电动汽车；与此同时，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8%E9%A3%9E%E6%9C%BA.md#1">电动飞机</a>也已经开始进入商业市场。</p>
+<p>在23日落幕的本年度巴黎航空展上，最受关注的是以色列飞机制造商Eviation Aircraft。这家公司的全<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E5%8A%A8%E9%A3%9E%E6%9C%BA.md#1">电动飞机</a>“爱丽丝”（Alice）一次可以承载9名乘客，充电一回最多可飞行1000多公里，飞行高度达到3000多米。爱丽丝的飞机尾部有一个主“推进式”螺旋桨，两边翼尖上也设置了螺旋桨，均由电池供电。</p>
 </p>
 <blockquote class="twitter-tweet" data-lang="zh-cn">
-<p dir="ltr" lang="es">En <ahref="https://twitter.com/hashtag/Video?src=hash&amp;ref_src=twsrc%5Etfw">#Video</a>: Conoce los últimos adelantos de la <ahref="https://twitter.com/hashtag/startup?src=hash&amp;ref_src=twsrc%5Etfw">#startup</a> israelí Eviation Aircraft para su avión eléctrico &#8216;Alice&#8217; <ahref="https://t.co/uGKCmuMuF5">https://t.co/uGKCmuMuF5</a> <ahref="https://twitter.com/hashtag/Energy?src=hash&amp;ref_src=twsrc%5Etfw">#Energy</a> <ahref="https://twitter.com/hashtag/Noticias?src=hash&amp;ref_src=twsrc%5Etfw">#Noticias</a> <ahref="https://twitter.com/hashtag/News?src=hash&amp;ref_src=twsrc%5Etfw">#News</a> <ahref="https://twitter.com/hashtag/Today?src=hash&amp;ref_src=twsrc%5Etfw">#Today</a> <ahref="https://twitter.com/hashtag/4May?src=hash&amp;ref_src=twsrc%5Etfw">#4May</a> <ahref="https://twitter.com/MagniX?ref_src=twsrc%5Etfw">@MagniX</a> <ahref="https://t.co/p20wfCSCAY"></a><img width="600" src="https://raw.githubusercontent.com/yu2306/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="p20wfCSCAY</a></p>
+<p dir="ltr" lang="es">En <ahref="https://twitter.com/hashtag/Video?src=hash&amp;ref_src=twsrc%5Etfw">#Video</a>: Conoce los últimos adelantos de la <ahref="https://twitter.com/hashtag/startup?src=hash&amp;ref_src=twsrc%5Etfw">#startup</a> israelí Eviation Aircraft para su avión eléctrico &#8216;Alice&#8217; <ahref="https://t.co/uGKCmuMuF5">https://t.co/uGKCmuMuF5</a> <ahref="https://twitter.com/hashtag/Energy?src=hash&amp;ref_src=twsrc%5Etfw">#Energy</a> <ahref="https://twitter.com/hashtag/Noticias?src=hash&amp;ref_src=twsrc%5Etfw">#Noticias</a> <ahref="https://twitter.com/hashtag/News?src=hash&amp;ref_src=twsrc%5Etfw">#News</a> <ahref="https://twitter.com/hashtag/Today?src=hash&amp;ref_src=twsrc%5Etfw">#Today</a> <ahref="https://twitter.com/hashtag/4May?src=hash&amp;ref_src=twsrc%5Etfw">#4May</a> <ahref="https://twitter.com/MagniX?ref_src=twsrc%5Etfw">@MagniX</a> <ahref="https://t.co/p20wfCSCAY"></a><a href="https://dtfavhq5d1ym2.cloudfront.net/W0vHkrrYw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="p20wfCSCAY</a></p>
 <p>— WorldEnergyTrade (@WorldEnergyTrad) <ahref="https://twitter.com/WorldEnergyTrad/status/1124758091013050368?ref_src=twsrc%5Etfw">2019年5月4日</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>这些飞机正在美国进行生产。Eviation Aircraft表示，它可以让航空公司的运营成本降低70%，并宣布美国海角航空（Cape Air）将成为他们的第一个客户。</p>
@@ -18,12 +18,12 @@
 <p>每次充电时间也大约1小时，每小时飞行的充电成本只有4～6美元。机身使用了复合材料，总重300公斤，其中包括100公斤重的电池。</p>
 </p>
 <blockquote class="twitter-tweet" data-lang="zh-cn">
-<p dir="ltr" lang="pl">.<ahref="https://twitter.com/pipistrelEU?ref_src=twsrc%5Etfw">@pipistrelEU</a> Alpha Electro, seryjnie produkowany ultralekki elektryczny, do pasa startowego. Mo?e lecie? przez godzin? na trasie 160km, na wysoko?ci 3km. ?adowanie baterii trwa godzin? <ahref="https://twitter.com/BIPolska?ref_src=twsrc%5Etfw">@BIPolska</a> <ahref="https://twitter.com/FortumPolska?ref_src=twsrc%5Etfw">@FortumPolska</a> <ahref="https://t.co/F72V6RMV5x"></a><img width="600" src="https://raw.githubusercontent.com/yu2306/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="F72V6RMV5x</a></p>
+<p dir="ltr" lang="pl">.<ahref="https://twitter.com/pipistrelEU?ref_src=twsrc%5Etfw">@pipistrelEU</a> Alpha Electro, seryjnie produkowany ultralekki elektryczny, do pasa startowego. Mo?e lecie? przez godzin? na trasie 160km, na wysoko?ci 3km. ?adowanie baterii trwa godzin? <ahref="https://twitter.com/BIPolska?ref_src=twsrc%5Etfw">@BIPolska</a> <ahref="https://twitter.com/FortumPolska?ref_src=twsrc%5Etfw">@FortumPolska</a> <ahref="https://t.co/F72V6RMV5x"></a><a href="https://dtfavhq5d1ym2.cloudfront.net/W0vHkrrYw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="F72V6RMV5x</a></p>
 <p>— Marcin Walków (@marcinwalkow) <ahref="https://twitter.com/marcinwalkow/status/1138780363126448128?ref_src=twsrc%5Etfw">2019年6月12日</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>这种机型维护简单，使用成本低廉，而且噪音比传统飞机小很多。由于具备充电设施的机场还不多，目前这种机型主要用于飞行训练。</p>
 <p>这家公司迄今为止已经生产了40架这种机型，每架飞机价格14万美元。</p>
-<p><center><a src=""></a><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/WiADDbeFanU" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在今后几年间，电动飞机将有迅猛的发展。</p>
+<p><center><a src=""></a><a href="https://dtfavhq5d1ym2.cloudfront.net/W0vHkrrYw"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WiADDbeFanU" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在今后几年间，电动飞机将有迅猛的发展。</p>
 <p>英国航空发动机制造商劳斯莱斯（Rolls-Royce）收购了德国西门子公司（Siemens）的电动和混合电动航空业务。此外，美国联合技术公司（UTX）计划和国防承包商雷神（Raytheon）合作，将于2022年推出油电混合飞机；空中客车（Airbus）也计划在2022年以前实验混合动力飞机。@*</p>
 <p>责任编辑：苏明真? </p>
 	
@@ -31,36 +31,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/5/31/n11291193.md#1">95岁田纳西老兵阵亡将士纪念日跳伞</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/5/31/n11291876.md#1">为何美军B-58轰炸机在飞行时弹射出黑熊？</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/6/24/n11342090.md#1">又有一纽约人死于多米尼加 飞机票降价</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/15/n12111201.md#1">NASA的星际旅行者下一步命运如何？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/31/n11291193.md#1">95岁田纳西老兵阵亡将士纪念日跳伞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/31/n11291876.md#1">为何美军B-58轰炸机在飞行时弹射出黑熊？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/24/n11342090.md#1">又有一纽约人死于多米尼加 飞机票降价</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612408.md#1">科学家追踪快速射电爆信号 发现不同来源</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10847366.md#1" target="_blank">林辉：燕大西语系四教授 文革三死一疯</a></li><li><a href="https://github.com/yu2306/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106565.md#1">【内幕】环时打脸刘鹤 党内分歧公开化</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106234.md#1">【有冇搞错】中共网路封锁即将崩溃</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106258.md#1">有意入籍台湾遭黄安攻击 黄秋生一句话爆呛</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12105610.md#1">坚持对台军售 法国呛中共：精力用错了地方</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/14/n12108396.md#1">中研院薪水比卸任副元首礼遇金高？陈建仁回应</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12103240.md#1">传因疫情不想白发工资 文咏珊辞退十年老助理</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12103485.md#1">赵薇丈夫黄有龙遭追债 香港名媛爆周五是期限</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12102973.md#1">直呼台湾空气新鲜 传黄秋生有意入籍台湾</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12104686.md#1">总统亲上节目受访 唐绮阳见小英惊呼：像做梦</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106548.md#1">疫情下戴口罩产子 日女星用力过度致尾椎骨折</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12102655.md#1">修道人半途而废 入红尘数年后惊见道友功成</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/16/9/28/n8345456.md#1">秤砣一击 寇准幡然悔悟</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/10/n12097328.md#1">【历史上的瘟疫】大清退位前夕的东北鼠疫</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/3/n12079813.md#1">向神祈祷为何不灵 自求多福怎么求？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/25/n11345420.htm">小型电动飞机问世 节约能源费用</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/25/n11345420.htm">小型电动飞机问世 节约能源费用</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/yu2306/djy/blob/master/gb/19/6/25/n11345420.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yu2306/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yu2306/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yu2306/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/6/25/n11345420.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
